2004-07-28 15:09  PeterB

	* libbalsa/mailbox_imap.c: plug leak.
	* src/balsa-index.c: reselect current message only when we need to.
	* src/main-window.c: new mail notification with --disable-threads.

2004-07-28  Pawel Salek

	* libbalsa/identity.[hc]: add a callback routine to notify when
	the identity list is actually changed.
	* libbalsa/imap-server.[hc]: save and restore configurable
	connection limit.
	* libbalsa/message.c: try harder to determine whether the message
	has attachments or not.
	* libbalsa/send.c: check libbalsa_mailbox_copy_message() result.
	* src/balsa-index.[hc]: implement SubjectOrSender filter.
	* src/balsa-message.c: attachment button accepts keyboard input.
	* src/folder-conf.c: configure IMAP connection limit (115023).
	* src/mailbox-conf.[hc]: implement balsa_server_conf_add_spinner().
	* src/mailbox-node.c: use libbalsa_imap_server_save_config().
	* src/main-window.[hc]: add "identities-changed" signal. Create SoS
	filter entry.
	* src/save-restore.c: emit this signal.
	* src/sendmsg-window.c: listen to it. use GtkBox instead of
	GtkPaned. Provide more info on sending failures.
	* src/toolbar-factory.c: change "Cancel" to "Close" compose
	window.

2004-07-27 20:04  PeterB

	* src/: main-window.c, main-window.h: add `notify' to api for
	check_new_messages_count.
	* src/balsa-mblist.c: reselect current mailbox if it becomes
	exposed; don't leave first mailbox highlighted on startup; check
	for finalized mailbox; use `notify' argument to tell
	check_new_messages_count not to popup the new mail message during
	opening and rethreading.
	* src/balsa-index.c: check messages for filtering out of the view
	in an idle handler; don't act on selection-changed if
	mailbox->state == LB_MAILBOX_STATE_TREECLEANING; unselect deleted
	message, so it can be filtered out, even if it's the last message.
	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c: check
	for mailbox->state == LB_MAILBOX_STATE_CLOSING instead of using an